// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth2faType: otp rendering 1`] = `
.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c7 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 50%;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c8:active {
  opacity: 0.56;
}

.c8:hover,
.c8:focus {
  background: #651FFF;
}

.c8:active {
  background: #354AA4;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c5 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
}

.c5::-ms-clear {
  display: none;
}

.c5::placeholder {
  opacity: 0.4;
}

.c4 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c2 {
  box-sizing: border-box;
  padding: 32px;
  background-color: #222C59;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c6 {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
}

<div
  class="c0"
  width="464px"
>
  <div
    class="c1"
    color="light"
  >
    Custom Title
  </div>
  <form
    class="c2"
  >
    <div
      class="c3"
    >
      <label
        class="c4"
        font-size="0"
      >
        Username
      </label>
      <input
        autocomplete="off"
        class="c5"
        color="text.onLight"
        placeholder="User name"
        value=""
      />
    </div>
    <div
      class="c3"
    >
      <label
        class="c4"
        font-size="0"
      >
        Password
      </label>
      <input
        autocomplete="off"
        class="c5"
        color="text.onLight"
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
    <div
      class="c6"
    >
      <div
        class="c7"
        width="50%"
      >
        <label
          class="c4"
          font-size="0"
        >
          Two factor token
        </label>
        <input
          autocomplete="off"
          class="c5"
          color="text.onLight"
          placeholder="123 456"
          value=""
        />
      </div>
    </div>
    <button
      class="c8"
      kind="primary"
      type="submit"
      width="100%"
    >
      LOGIN
    </button>
  </form>
</div>
`;

exports[`auth2faType: u2f rendering 1`] = `
.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c6 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c6:active {
  opacity: 0.56;
}

.c6:hover,
.c6:focus {
  background: #651FFF;
}

.c6:active {
  background: #354AA4;
}

.c6:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c5 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
}

.c5::-ms-clear {
  display: none;
}

.c5::placeholder {
  opacity: 0.4;
}

.c4 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
  margin-top: 8px;
  text-align: center;
}

.c2 {
  box-sizing: border-box;
  padding: 32px;
  background-color: #222C59;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

<div
  class="c0"
  width="464px"
>
  <div
    class="c1"
    color="light"
  >
    Welcome!
  </div>
  <form
    class="c2"
  >
    <div
      class="c3"
    >
      <label
        class="c4"
        font-size="0"
      >
        Username
      </label>
      <input
        autocomplete="off"
        class="c5"
        color="text.onLight"
        placeholder="User name"
        value=""
      />
    </div>
    <div
      class="c3"
    >
      <label
        class="c4"
        font-size="0"
      >
        Password
      </label>
      <input
        autocomplete="off"
        class="c5"
        color="text.onLight"
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
    <button
      class="c6"
      disabled=""
      kind="primary"
      type="submit"
      width="100%"
    >
      LOGIN
    </button>
    <div
      class="c7"
      width="100%"
    >
      Insert your U2F key and press the button on the key
    </div>
  </form>
</div>
`;

exports[`nonrendering of SSO providers w/ local auth disabled and no providers 1`] = `
.c2 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-all;
  line-height: 1.5;
  margin-top: 32px;
  margin-bottom: 32px;
  background: #f50057;
  color: #FFFFFF;
}

.c2 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  padding-bottom: 32px;
  padding-left: 32px;
  padding-right: 32px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 8px;
}

<div
  class="sc-AxirZ c0"
  width="464px"
>
  <div
    class="c1"
    color="light"
  >
    Welcome!
  </div>
  <div
    class="c2"
    kind="danger"
  >
    Login has not been enabled
  </div>
  <div
    class="c3"
    width="100%"
  >
    The ability to login has not been enabled. Please contact your system administrator for more information.
  </div>
</div>
`;

exports[`nonrendering of user/pass/otp/login elements w/ local auth disabled 1`] = `
.c2 {
  box-sizing: border-box;
  padding-bottom: 32px;
  padding-top: 8px;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 100%;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c7 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c4 {
  background-color: #444444;
  display: block;
  width: 100%;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c4:hover,
.c4:focus {
  background: rgba(68,68,68,0.4);
}

.c4 .c6 {
  font-size: 20px;
  opacity: 0.87;
}

.c8 {
  background-color: #dd4b39;
  display: block;
  width: 100%;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c8:hover,
.c8:focus {
  background: rgba(221,75,57,0.4);
}

.c8 .c6 {
  font-size: 20px;
  opacity: 0.87;
}

.c5 {
  align-items: center;
  display: flex;
  justify-content: center;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  width: 56px;
  font-size: 24px;
  text-align: center;
  border-right: 1px solid rgba(0,0,0,0.12);
}

<div
  class="c0"
  width="464px"
>
  <div
    class="c1"
    color="light"
  >
    Welcome!
  </div>
  <div
    class="c2"
  >
    <button
      class="c3 c4"
      color="#444444"
      kind="primary"
    >
      <div
        class="c5"
      >
        <span
          class="c6 c7 icon icon-github "
          color="light"
          data-testid="icon"
        />
      </div>
      Login with github
    </button>
    <button
      class="c3 c8"
      color="#dd4b39"
      kind="primary"
    >
      <div
        class="c5"
      >
        <span
          class="c6 c7 icon icon-google-plus "
          color="light"
          data-testid="icon"
        />
      </div>
      Login with google
    </button>
  </div>
</div>
`;

exports[`server error rendering 1`] = `
.c2 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-all;
  line-height: 1.5;
  margin-bottom: 0px;
  margin-top: 32px;
  margin-left: 32px;
  margin-right: 32px;
  background: #f50057;
  color: #FFFFFF;
}

.c2 a {
  color: #FFFFFF;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c7:active {
  opacity: 0.56;
}

.c7:hover,
.c7:focus {
  background: #651FFF;
}

.c7:active {
  background: #354AA4;
}

.c7:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c6 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
}

.c6::-ms-clear {
  display: none;
}

.c6::placeholder {
  opacity: 0.4;
}

.c5 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c3 {
  box-sizing: border-box;
  padding: 32px;
  background-color: #222C59;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

<div
  class="c0"
  width="464px"
>
  <div
    class="c1"
    color="light"
  >
    Welcome!
  </div>
  <div
    class="c2"
    kind="danger"
  >
    invalid credentials with looooooooooooooooooooooooooooooooong text
  </div>
  <form
    class="c3"
  >
    <div
      class="c4"
    >
      <label
        class="c5"
        font-size="0"
      >
        Username
      </label>
      <input
        autocomplete="off"
        class="c6"
        color="text.onLight"
        placeholder="User name"
        value=""
      />
    </div>
    <div
      class="c4"
    >
      <label
        class="c5"
        font-size="0"
      >
        Password
      </label>
      <input
        autocomplete="off"
        class="c6"
        color="text.onLight"
        placeholder="Password"
        type="password"
        value=""
      />
    </div>
    <button
      class="c7"
      kind="primary"
      type="submit"
      width="100%"
    >
      LOGIN
    </button>
  </form>
</div>
`;

exports[`sso providers rendering 1`] = `
.c2 {
  box-sizing: border-box;
  padding-bottom: 32px;
  padding-top: 8px;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 16px;
  width: 100%;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #651FFF;
}

.c16:active {
  background: #354AA4;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c7 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
}

.c15 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  padding: 0 8px;
}

.c15:hover,
.c15:focus {
  background: #222C59;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 32px;
  color: #FFFFFF;
  text-align: center;
}

.c12 {
  box-sizing: border-box;
  height: 1px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c14 {
  box-sizing: border-box;
  padding: 32px;
  background-color: #1C254D;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
  display: flex;
  justify-content: center;
  flex-direction: row;
}

.c4 {
  background-color: #444444;
  display: block;
  width: 100%;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c4:hover,
.c4:focus {
  background: rgba(68,68,68,0.4);
}

.c4 .c6 {
  font-size: 20px;
  opacity: 0.87;
}

.c8 {
  background-color: #dd4b39;
  display: block;
  width: 100%;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c8:hover,
.c8:focus {
  background: rgba(221,75,57,0.4);
}

.c8 .c6 {
  font-size: 20px;
  opacity: 0.87;
}

.c9 {
  background-color: #205081;
  display: block;
  width: 100%;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c9:hover,
.c9:focus {
  background: rgba(32,80,129,0.4);
}

.c9 .c6 {
  font-size: 20px;
  opacity: 0.87;
}

.c10 {
  background-color: #f7931e;
  display: block;
  width: 100%;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c10:hover,
.c10:focus {
  background: rgba(247,147,30,0.4);
}

.c10 .c6 {
  font-size: 20px;
  opacity: 0.87;
}

.c11 {
  background-color: #2672ec;
  display: block;
  width: 100%;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c11:hover,
.c11:focus {
  background: rgba(38,114,236,0.4);
}

.c11 .c6 {
  font-size: 20px;
  opacity: 0.87;
}

.c5 {
  align-items: center;
  display: flex;
  justify-content: center;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  width: 56px;
  font-size: 24px;
  text-align: center;
  border-right: 1px solid rgba(0,0,0,0.12);
}

.c13 {
  background: #222C59;
  display: flex;
  align-items: center;
  font-size: 10px;
  height: 32px;
  width: 32px;
  top: -16px;
  justify-content: center;
  border-radius: 50%;
  position: absolute;
  z-index: 1;
}

<div
  class="c0"
  width="464px"
>
  <div
    class="c1"
    color="light"
  >
    Welcome!
  </div>
  <div
    class="c2"
  >
    <button
      class="c3 c4"
      color="#444444"
      kind="primary"
    >
      <div
        class="c5"
      >
        <span
          class="c6 c7 icon icon-github "
          color="light"
          data-testid="icon"
        />
      </div>
      github
    </button>
    <button
      class="c3 c8"
      color="#dd4b39"
      kind="primary"
    >
      <div
        class="c5"
      >
        <span
          class="c6 c7 icon icon-google-plus "
          color="light"
          data-testid="icon"
        />
      </div>
      google
    </button>
    <button
      class="c3 c9"
      color="#205081"
      kind="primary"
    >
      <div
        class="c5"
      >
        <span
          class="c6 c7 icon icon-bitbucket "
          color="light"
          data-testid="icon"
        />
      </div>
      bitbucket
    </button>
    <button
      class="c3 c10"
      color="#f7931e"
      kind="primary"
    >
      <div
        class="c5"
      >
        <span
          class="c6 c7 icon icon-openid "
          color="light"
          data-testid="icon"
        />
      </div>
      Login with Mission Control
    </button>
    <button
      class="c3 c11"
      color="#2672ec"
      kind="primary"
    >
      <div
        class="c5"
      >
        <span
          class="c6 c7 icon icon-windows "
          color="light"
          data-testid="icon"
        />
      </div>
      microsoft
    </button>
  </div>
  <div
    class="c12"
    height="1px"
    style="position: relative;"
  >
    <div
      class="c13"
    >
      Or
    </div>
  </div>
  <div
    class="c14"
  >
    <a
      class="c15 c16"
      kind="primary"
    >
      Sign in with your Username and Password
    </a>
  </div>
</div>
`;
